--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>this is my first webpage</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis repellendus perferendis doloribus, incidunt sit officia aspernatur eveniet ex? Fuga tenetur a ea consequatur cupiditate culpa voluptatum nulla obcaecati nobis dicta!</p>
 </body>
 </html>
